--- a/youtude recommandation.ipynb
+++ b/youtude recommandation.ipynb
@@ -4,7 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 유튜브 추천 시스템"
+    "# 유튜브 추천 시스템"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 데이터 불러오기"
    ]
   },
   {
@@ -66,6 +73,13 @@
     "\n",
     "movie_ratings = pd.merge(movies, ratings, on='movieId')\n",
     "print(movie_ratings)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### ratings가 3보다 크면 like, 3보다 작으면 dislike"
    ]
   },
   {
@@ -133,7 +147,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 정수인코딩"
+    "#### 정수인코딩\n",
+    "#### 우선 중복을 제거"
    ]
   },
   {
@@ -393,11 +408,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 모델설계"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.layers import Input, LSTM, Embedding, Dense, Masking\n",
+    "from tensorflow.keras.models import Model\n",
+    "from tensorflow.keras.preprocessing.sequence import pad_sequences"
+   ]
   },
   {
    "cell_type": "code",
